--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konum Bilgileri</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="./main.js" defer></script>
   </head>
   <body>
     <div class="container"></div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="./main.js" defer></script>
   </body>
 </html>
